<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapp.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_workouts"
        android:name="com.example.myapp.WorkoutsFragment"
        android:label="@string/nav_workouts"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_nutrition"
        android:name="com.example.myapp.NutritionFragment"
        android:label="@string/nav_nutrition"
        tools:layout="@layout/fragment_nutrition" />

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.myapp.TimerFragment"
        android:label="@string/nav_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_achievements"
        android:name="com.example.myapp.AchievementsFragment"
        android:label="@string/nav_achievements"
        tools:layout="@layout/fragment_achievements" />

</navigation>